# mandelbrot_set

./: .gitignore  CMakeLists.txt  README.md
include/: mandelbrot.hpp  window.hpp
src/: color.cpp  main.cpp  mandelbrot.cpp  window.cpp
